Show workspace name on openshift deployments and fix styling

--- a/packages/online-editor/static/resources/style.css
+++ b/packages/online-editor/static/resources/style.css
@@ -631,3 +631,9 @@ section.kogito-tooling--settings-tab {
 .kogito-tooling--problems-tab-content {
   overflow: auto;
 }
+
+@media screen and (min-width: 576px) {
+  .kogito--editor__responsive-dropdown .pf-c-dropdown__menu {
+    min-width: 400px;
+  }
+}
